--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -85,7 +85,7 @@
     padding: 5rem 5vw!important;
 }
 .titleHolder{
-    height:80vh;
+    height:65vh;
     width: 45vw;
     min-width: 350px;
     position: absolute;
